--- a/bDot/bemCss/orderform_customeOrder.html
+++ b/bDot/bemCss/orderform_customeOrder.html
@@ -370,14 +370,79 @@
                                             </div>
                                         </div>
                                         <div class="generalAccordsubchild">
+                                            <!--아무리스트없을때 shipp9ng address-->
+                                            <!--<p class="shippingaddress-listempty__message">
+                                                Not a registered shopment
+                                            </p>-->
+                                            <ul class="shippingaddress-listexists">
+                                                <li class="shippingaddress-listitem">
+                                                    <div class="radioCheckItem">
+                                                        <input type="radio" name='shippingaddress'value="jenueifer lopez[default]" id="address1"class="radioCheckItem__radio"/>
+                                                        <label for="address1" class="radioCheckItem__checklabel"></label>
+                                                        <label for='address1' class="radioCheckItem__checktxt">Jennifer Lopez [Default]</label>
+                                                    </div>
+                                                    <div class="shippingaddress-listcond">
+                                                        <div class="shippingaddress-listcondicon">
+                                                            <span class="svgframe">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13 14" fill="none">
+                                                                <path fill-rule="evenodd" clip-rule="evenodd" d="M9.24082 0.973054C9.87154 0.342315 10.8941 0.342316 11.5248 0.973054L12.5269 1.97515C13.1577 2.60588 13.1577 3.6285 12.5269 4.25924L4.58097 12.2052C4.38688 12.3993 4.14653 12.5407 3.88262 12.6161L0.882365 13.4733C0.640653 13.5424 0.380511 13.475 0.202758 13.2972C0.0250041 13.1195 -0.0424085 12.8594 0.0266468 12.6177L0.883869 9.61738C0.959272 9.35352 1.10069 9.1131 1.29478 8.91901L9.24082 0.973054ZM10.546 1.95195C10.4558 1.86185 10.3097 1.86185 10.2197 1.95195L9.05439 3.11719L10.3828 4.44558L11.5481 3.28034C11.6382 3.19024 11.6382 3.04415 11.5481 2.95405L10.546 1.95195ZM9.4039 5.42448L8.07553 4.09609L2.27368 9.89794C2.24595 9.92563 2.22575 9.95996 2.21497 9.99771L1.70004 11.8L3.5023 11.285C3.54 11.2743 3.57434 11.2541 3.60207 11.2263L9.4039 5.42448Z" fill="#212121"/>
+                                                                </svg>
+                                                            </span>
+                                                        </div>
+                                                        <div class="shippingaddress-listcondicon">
+                                                           <img src="img/common/delete.svg"/>
+                                                        </div>
+                                                    </div>
+                                                    <p class="shippingaddress-listdetail">
+                                                        US [90680]<br/>
+                                                        1860 BEACH BLVD STE H, STANTON, California
+                                                    </p>
+                                                    <p class="shippingaddress-listdetail">
+                                                        Cell : 0012341234 <br/>
+                                                        Tel : 00123123
+                                                    </p>
+                                                    <p class="shippingaddress-listdetail">
+                                                        Message : Please keep it in the security room.
+                                                    </p>
+                                                </li>
+                                                <li class="shippingaddress-listsep"></li>
+                                                <li class="shippingaddress-listitem">
+                                                    <div class="radioCheckItem">
+                                                        <input type="radio" name='shippingaddress'value="jenueifer lopez[default]" id="address2"class="radioCheckItem__radio"/>
+                                                        <label for="address2" class="radioCheckItem__checklabel"></label>
+                                                        <label for='address2' class="radioCheckItem__checktxt">Jenny Kim</label>
+                                                    </div>
+                                                    <div class="shippingaddress-listcond">
+                                                        <div class="shippingaddress-listcondicon">
+                                                            <span class="svgframe">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13 14" fill="none">
+                                                                <path fill-rule="evenodd" clip-rule="evenodd" d="M9.24082 0.973054C9.87154 0.342315 10.8941 0.342316 11.5248 0.973054L12.5269 1.97515C13.1577 2.60588 13.1577 3.6285 12.5269 4.25924L4.58097 12.2052C4.38688 12.3993 4.14653 12.5407 3.88262 12.6161L0.882365 13.4733C0.640653 13.5424 0.380511 13.475 0.202758 13.2972C0.0250041 13.1195 -0.0424085 12.8594 0.0266468 12.6177L0.883869 9.61738C0.959272 9.35352 1.10069 9.1131 1.29478 8.91901L9.24082 0.973054ZM10.546 1.95195C10.4558 1.86185 10.3097 1.86185 10.2197 1.95195L9.05439 3.11719L10.3828 4.44558L11.5481 3.28034C11.6382 3.19024 11.6382 3.04415 11.5481 2.95405L10.546 1.95195ZM9.4039 5.42448L8.07553 4.09609L2.27368 9.89794C2.24595 9.92563 2.22575 9.95996 2.21497 9.99771L1.70004 11.8L3.5023 11.285C3.54 11.2743 3.57434 11.2541 3.60207 11.2263L9.4039 5.42448Z" fill="#212121"/>
+                                                                </svg>
+                                                            </span>
+                                                        </div>
+                                                        <div class="shippingaddress-listcondicon">
+                                                           <img src="img/common/delete.svg"/>
+                                                        </div>
+                                                    </div>
+                                                    <p class="shippingaddress-listdetail">
+                                                        US [90680]<br/>
+                                                        1860 BEACH BLVD STE H, STANTON, California
+                                                    </p>
+                                                    <p class="shippingaddress-listdetail">
+                                                        Cell : 0012341234 <br/>
+                                                        Tel : 00123123
+                                                    </p>
+                                                    <p class="shippingaddress-listdetail">
+                                                        Message : Please keep it in the security room.
+                                                    </p>
+                                                </li>
+                                            </ul>
                                             <div class="shippingaddress-listempty">
-                                                <p class="shippingaddress-listempty__message">
-                                                    Not a registered shopment
-                                                </p>
+                                             
                                                 <div class="shippingaddress-listempty__addAddress">
                                                     <div class="shippingaddress-listempty__plusicon">
                                                         <span class="svgframe">
-                                                            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" fill="none">
                                                             <rect y="5.5" width="1" height="9" transform="rotate(-90 0 5.5)" fill="#063451"/>
                                                             <rect x="4" y="0.5" width="1" height="9" fill="#063451"/>
                                                             </svg>
@@ -483,6 +548,85 @@
                                                 <span class="generalAccordCont__verticalTarget"></span>
                                                 <span class="generalAccordCont__horizontal"></span>
                                             </div>
+                                        </div>
+                                        <div class="generalAccordsubchild">
+                                            <div class="availcoupon">
+                                                <dl class="availcoupon__head">
+                                                    <dt class="availcoupon__headtit">Avaiable coupon</dt>
+                                                    <dd class="availcoupon__headvalue">
+                                                        <span class="bold">5</span>Coupon
+                                                    </dd>
+                                                </dl>
+                                                <div class="availcouponlist">
+                                                   <div class="selectbarList javascript_selectList_toggle"status='closed'>
+                                                        <div class="selectbarList__top">
+                                                            <span class="txt">Please select a coupon</span>
+                                                        </div>
+                                                        <div class="selectbarList__dropdownicon javascript_selectToggle_icon">
+                                                            <span class="svgframe">
+                                                                <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 10 6" fill="none">
+                                                                <path d="M9 1L5 5L1 1" stroke="#666666" stroke-linecap="round" stroke-linejoin="round"/>
+                                                                </svg>
+                                                            </span>
+                                                        </div>
+                                                        <span   class="selectbarList__fixedTop javascript_selectToggle_sepbar"style='display:none'>                            
+                                                        </span>
+                                                        <ul class="selectbarList__list javascript_selectToggle_subchild"id='couponselect'style='display:none'>
+                                                            <li class="selectbarList__item">
+                                                                <p class="selectbarList__itemtit">
+                                                                    20% discount coupon for new signup
+                                                                </p>
+                                                                <div class="selectbarList__itemcontent">
+                                                                    <span class="selectbarList__itemdate">Expiration period:2023-07-14</span>
+                                                                    <span class="selectbarList__contentsepbar"></span>
+                                                                    <span class="selectbarList__itemvalue">20%</span>
+                                                                </div>
+                                                            </li>
+                                                            <li class="selectbarList__item">
+                                                                <p class="selectbarList__itemtit">
+                                                                    20% discount coupon for new signup
+                                                                </p>
+                                                                <div class="selectbarList__itemcontent">
+                                                                    <span class="selectbarList__itemdate">Expiration period:2023-07-14</span>
+                                                                    <span class="selectbarList__contentsepbar"></span>
+                                                                    <span class="selectbarList__itemvalue">20%</span>
+                                                                </div>
+                                                            </li>
+                                                            <li class="selectbarList__item">
+                                                                <p class="selectbarList__itemtit">
+                                                                    20% discount coupon for new signup
+                                                                </p>
+                                                                <div class="selectbarList__itemcontent">
+                                                                    <span class="selectbarList__itemdate">Expiration period:2023-07-14</span>
+                                                                    <span class="selectbarList__contentsepbar"></span>
+                                                                    <span class="selectbarList__itemvalue">20%</span>
+                                                                </div>
+                                                            </li>
+                                                            <li class="selectbarList__item">
+                                                                <p class="selectbarList__itemtit">
+                                                                    20% discount coupon for new signup
+                                                                </p>
+                                                                <div class="selectbarList__itemcontent">
+                                                                    <span class="selectbarList__itemdate">Expiration period:2023-07-14</span>
+                                                                    <span class="selectbarList__contentsepbar"></span>
+                                                                    <span class="selectbarList__itemvalue">20%</span>
+                                                                </div>
+                                                            </li>
+                                                        </ul>
+                                                   </div>
+                                                </div>
+                                                <div class="checkListcond">
+                                                    <input type="checkbox" class="checkListcond__checkbox" value="automaticCoupon" id="automaticCoupon" name="automaticCoupon"/>
+                                                    <label for="automaticCoupon" class="checkListcond__checklabel checkListcond__checklabel--size2"></label>
+                                                    <label for="automaticCoupon" class="checkListcond__txt checkListcond__txt--size3">Automatic application of maximum benefit coupons</label>
+                                                </div>
+                                                <dl class="availcoupon__bottom">
+                                                    <dt class="availcoupon__bottomtit">Expected amount of coupon discount</dt>
+                                                    <dd class="availcoupon__bottomprice">
+                                                        <span class="bold">$</span>0
+                                                    </dd>
+                                                </dl>
+                                            </div>                          
                                         </div>
                                     </li>
                                     <li class="generalAccordItem">
@@ -894,6 +1038,55 @@ for(let r=0; r<radioCheckTwo__radio.length; r++){
     item.onchange=function(event){
         console.log("라디오 변화 관련 이벤트 발생:",event.target);
     }
+}
+
+//셀렉트박스형 토글링박스요소
+let javascript_selectList_toggle=document.getElementsByClassName("javascript_selectList_toggle");
+for(let j=0; j<javascript_selectList_toggle.length; j++){
+    let item=javascript_selectList_toggle[j];
+    item.onclick=javascript_selectbox_toggle;
+}
+function javascript_selectbox_toggle(event){
+    console.log("클릭타깃:",event.target);
+    let target=event.target;
+
+    if(target.className.indexOf("javascript_selectList_toggle")==-1){
+        for(let i=0; i<100; i++){
+            target=target.parentElement;
+            if(target.className.indexOf("javascript_selectList_toggle")!=-1){
+                break;
+            }
+        }
+    }
+    console.log("관련찾아낸 타깃:",target);
+    let icon,sepbar,subchild;
+
+    let childs=target.children;
+    for(let c=0; c<childs.length;c++){
+        let c_item=childs[c];
+        if(c_item.className.indexOf("_icon")!=-1){
+            icon=c_item;
+        }
+        else if(c_item.className.indexOf("_sepbar")!=-1){
+            sepbar=c_item;
+        }
+        else if(c_item.className.indexOf("_subchild")!=-1){
+            subchild=c_item;
+        }
+    }
+    console.log("연관타깃들:",icon,sepbar,subchild);
+    if(target.getAttribute("status").indexOf("open")!=-1){
+        target.setAttribute("status",'close');
+        icon.style.transform='none';
+        sepbar.style.display='none';
+        $('#'+subchild.id).slideUp();
+    }else{
+        target.setAttribute("status",'open');
+        icon.style.transform='rotateZ(180deg)';
+        sepbar.style.display='block';
+        $('#'+subchild.id).slideDown();
+    }
+
 }
 </script>
 
